--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/multer": "^1.4.12",
